--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   
         <div class="feature__item">
           <div class="feature__icon">
-            <img src="/images/icon-online.svg" />
+            <img src="images/icon-online.svg" />
           </div>
           <div class="feature__title">
             Online Banking
@@ -92,7 +92,7 @@
   
         <div class="feature__item">
           <div class="feature__icon">
-            <img src="/images/icon-budgeting.svg" />
+            <img src="images/icon-budgeting.svg" />
           </div>
           <div class="feature__title">
             Simple Budgeting
@@ -104,7 +104,7 @@
   
         <div class="feature__item">
           <div class="feature__icon">
-            <img src="/images/icon-onboarding.svg" />
+            <img src="images/icon-onboarding.svg" />
           </div>
           <div class="feature__title">
             Fast Onboarding
@@ -116,7 +116,7 @@
   
         <div class="feature__item">
           <div class="feature__icon">
-            <img src="/images/icon-api.svg" />
+            <img src="images/icon-api.svg" />
           </div>
           <div class="feature__title">
             Open API
@@ -186,7 +186,7 @@
     <div class="container">
 
       <a href="#" class="footer__logo">
-        <img src="/images/logo-dark.svg" />
+        <img src="images/logo-dark.svg" />
       </a>
   
       <div class="footer__social">
